# Pico

./: .gitignore  README.md
Adafruit_Displays/: Adafruit_GFX.cpp  Adafruit_GFX.h  Adafruit_GrayOLED.h  Adafruit_SPITFT.cpp  Adafruit_SPITFT.h  CMakeLists.txt  ILI9341_pico.cpp  ILI9341_pico.h  font_Arial.h  main.cpp  print.cpp
BcdClock/: CMakeLists.txt  LDR.txt  adc.cpp  adc.hpp  adc_webapp.cpp  adc_webapp.hpp  bst.cpp  bst.hpp  clock.cpp  clock.hpp  clock_webapp.cpp  clock_webapp.hpp  display.cpp  display.hpp  form.html  history.cpp  history.hpp  history.html  history_webapp.cpp  history_webapp.hpp  index.cpp  index.hpp  main.cpp  mqtt.cpp  mqtt.hpp  neopixel.cpp  neopixel.hpp  ntp_client.cpp  ntp_client.hpp  rcwl0516.hpp  tick.hpp
Displays/: CMakeLists.txt  GFX.cpp  GFX.h  GFX_Button.cpp  GFX_Button.h  GFX_Canvas.cpp  GFX_Canvas.h  ILI9341_pico.h  README.md  ST7735_pico.cpp  ST7735_pico.h  TFT_Display.cpp  TFT_Display.h  fonts.h  gfxfont.h  main.cpp  print.h
Displays/FT6336U/: Ft6336GU_Firmware 外部寄存器_20151112- EN.xlsx  ft6336u.c  ft6336u.h
Displays/IL19341/: ILI9341_pico.cpp
Displays/ST_LCD/: ST7735_pico.cpp  ST7735_pico.h  ST7789T3_Init_Guide.md  ST7789T3_commands.h  ST7789T3_pico.cpp  ST7789T3_pico.h  ST7789_pico.cpp  ST7789_pico.h  TFT_Display.cpp  TFT_Display.h  st7796_pico.cpp  st7796_pico.h
Displays/fonts/: font_Arial.h  font_ArialBold.h
Displays/gfx_fonts/: FreeSerif12pt7b.h
Fred/: CMakeLists.txt
ILI9341/: CMakeLists.txt  ILI9341_fonts.h  ILI9341_pico.cpp  ILI9341_pico.h  font_ArialBold.h  main.cpp
NeoPixel/: form.html  index.cpp  main.cpp
PicoHardware/: dma.cpp  dma.h  i2c.cpp  i2c.h  spi.cpp  spi.h  uart.cpp  uart.h
RP2350-Touch-Demo/: CMakeLists.txt
RP2350-Touch-Demo/examples/: CMakeLists.txt
RP2350-Touch-Demo/examples/audio_out/: CMakeLists.txt  audio_out.c  i2stest8bit.h
RP2350-Touch-Demo/examples/hello_world/usb/: CMakeLists.txt
RP2350-Touch-Demo/examples/lcd/: CMakeLists.txt
RP2350-Touch-Demo/examples/lcd/lcd_flush_rgb/: CMakeLists.txt  lcd_flush_rgb.c
RP2350-Touch-Demo/examples/lcd/lcd_touch/: CMakeLists.txt  lcd_touch.c
RP2350-Touch-Demo/examples/lvgl/factory/lvgl_ui/: lvgl_ui.c  lvgl_ui.h
RP2350-Touch-Demo/examples/lvgl/factory/lvgl_ui/tileview/: image_tile.c  qmi8658_tile.c  rgb_tile.c  system_tile.c
RP2350-Touch-Demo/examples/lvgl/lv_port/: lv_port.c
RP2350-Touch-Demo/examples/lvgl/lvgl_battery/: CMakeLists.txt  lvgl_battery.c
RP2350-Touch-Demo/examples/lvgl/lvgl_brightness/: lvgl_brightness.c
RP2350-Touch-Demo/examples/lvgl/lvgl_image/: README.md
RP2350-Touch-Demo/examples/lvgl/lvgl_pcf85063/: CMakeLists.txt  lvgl_pcf85063.c
RP2350-Touch-Demo/examples/qmi8658_raw_out/: CMakeLists.txt  qmi8658_raw_out.c
RP2350-Touch-Demo/examples/rtc_pcf85063/: CMakeLists.txt  rtc_pcf85063.c
RP2350-Touch-Demo/examples/sd_card_sdio/: CMakeLists.txt  sd_card_sdio.c
RP2350-Touch-Demo/firmware/: audio_out.uf2  qmi8658_raw_out.uf2  rtc_pcf85063.uf2  sd_card_sdio.uf2
RP2350-Touch-Demo/firmware/hello_world/: hello_serial.uf2  hello_usb.uf2
RP2350-Touch-Demo/firmware/lcd/: lcd_flush_rgb.uf2  lcd_touch.uf2
RP2350-Touch-Demo/firmware/lvgl/: factory.uf2  lvgl_battery.uf2  lvgl_brightness.uf2  lvgl_example.uf2  lvgl_image.uf2  lvgl_pcf85063.uf2  lvgl_qmi8658.uf2
RP2350-Touch-Demo/libraries/bsp/: bsp_i2c.c  bsp_i2c.h  bsp_i2s.pio  bsp_pcf85063.c  bsp_pcf85063.h  bsp_qmi8658.c  bsp_qmi8658.h
RP2350-Touch-LCD-2.8/: CMakeLists.txt  QMI8658A_IMU_Fusion_Guide.md  battery.cpp  battery.h  horizon_display.cpp  horizon_display.h  i2s.cpp  i2s.h  i2s.pio  lcd_brightness.cpp  lcd_brightness.h  main.cpp  main.h  readme.md
RP2350-Touch-LCD-2.8/SensorFusion/: GpsData.h  HalInterface.h  MEKF.h  Mat.h  QMI8658A.h  Quaternion.h  README.md  SensorFusion.h  Vec3.h
SDFat_Pico/: CMakeLists.txt  Print.h  main.cpp  notes.txt
SDFat_Pico/SdFat-pico/src/: SdFatConfig.h
SDFat_Pico/SdFat-pico/src/FsLib/: FsFile.h
SDFat_Pico/SdFat-pico/src/SpiDriver/: SdSpiRpiPico.cpp  SdSpiRpiPico.h
ST77355/: CMakeCache.txt  CMakeLists.txt  Makefile  ST7735_pico.cpp  ST7735_pico.h  cmake_install.cmake  main.cpp  st7735.dis  st7735.elf  st7735.elf.map  st7735.hex  st7735.uf2
ST77355/elf2uf2/: CMakeCache.txt  Makefile  cmake_install.cmake  elf2uf2
ST77355/elf2uf2/boot_uf2_headers/: Makefile
Sensors/: ADXL362.cpp  AHTX0.cpp  AHTX0.h  BMP280.cpp  BMP280.h  CST328.cpp  CST328.h  EbyteLora.cpp  EbyteLora.h  GY30.cpp  GY30.h  HDC1080.cpp  HDC1080.h  MCP9808.cpp  MCP9808.h  QMI8658.cpp  QMI8658.h  bmp085.cpp  bmp085.h
Weather/: CMakeLists.txt  display.cpp  index.cpp  letterbox.hpp  main.cpp  weather.cpp  weather_webapp.cpp  weather_webapp.hpp
WebServer/: form.html.min  server.hpp  webserver.cpp  wifi.cpp  wifi.hpp
clock/: CMakeLists.txt  clock.cpp  clock.h
pixel_string/: CMakeLists.txt  display.cpp  display.hpp  display_webapp.cpp  display_webapp.hpp  form.html  index.cpp  lwipopts.h  main.cpp  neopixel.cpp  neopixel.hpp  output.txt
telemetry/: ADXL362.h  ADXL362_sparkfun.odt  CMakeLists.txt  bmp085.cpp  bmp085.h  minicom.cap  notes.txt  telemetry.cpp  vario.cpp
